--- a/cv.qmd
+++ b/cv.qmd
@@ -1,57 +1,62 @@
 ---
 title: "CV"
+format:
+  html:
+    embed-resources: true
+# Ensure the PDFs are included when publishing
+resources:
+  - academic_cv.pdf
+  - industry_cv.pdf
+  - europass_cv.pdf
 ---
 
-```{=html}
 <style>
   body {
-  background-image: url("/backgrounds/background_ag1.jpeg");
-  background-attachment: fixed;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-  
-.text-background {
-    background-color: rgba(256, 256, 256, 0.6); 
-    color: black; /* White text for contrast */
-    padding: 5px 10px; /* Padding around text */
-    display: inline-block; /* Ensures the background only takes up necessary space */
-}
+    background-image: url("/backgrounds/background_ag1.jpeg");
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+  .text-background {
+    background-color: rgba(255, 255, 255, 0.6);
+    color: black;
+    padding: 5px 10px;
+    display: inline-block;
+  }
+  .cv-preview-wrap {
+    background-color: rgba(255,255,255,0.6);
+    padding: 6px 10px;
+    border-radius: 8px;
+    margin: 8px 0 18px 0;
+  }
+  .cv-frame {
+    width: 100%;
+    height: 900px;  /* adjust height if needed */
+    border: 0;
+    border-radius: 6px;
+    background: #fff;
+  }
 </style>
-```
 
-<p><i class="fas fa-download pr-1 fa-fw"></i><a href=academic_cv.pdf target=_blank> Click here to download my Academic CV (usually up to date)</a>.</p>
+Here you can find the copies and previews of my CVs
 
-<p><i class="fas fa-download pr-1 fa-fw"></i><a href=industry_cv.pdf target=_blank> Click here to download my Industry CV (last update, spring 2025)</a>.</p>
+<p><i class="fas fa-download pr-1 fa-fw"></i><a href="academic_cv.pdf" target="_blank" rel="noopener"> Click here to download my Academic CV (usually up to date)</a>.</p>
 
-<p><i class="fas fa-download pr-1 fa-fw"></i><a href=europass_cv.pdf target=_blank> Click here to download my CV in Europass format (last update, spring 2025)</a>.</p>
+<p><i class="fas fa-download pr-1 fa-fw"></i><a href="industry_cv.pdf" target="_blank" rel="noopener"> Click here to download my Industry CV (last update, spring 2025)</a>.</p>
 
-<!-- You can also download the cv <a href="https://github.com/gaetanoscaduto/cv/tree/main/cv_pdf/cv.pdf">here</a> -->
+<p><i class="fas fa-download pr-1 fa-fw"></i><a href="europass_cv.pdf" target="_blank" rel="noopener"> Click here to download my CV in Europass format (last update, spring 2025)</a>.</p>
 
-<!-- <object data="cv.pdf" type="application/pdf" width="800px" height="800px"> <embed src="cv.pdf"> Your browser does not support PDFs embedded in this website. You can still view my cv at <a href="https://github.com/gaetanoscaduto/cv/tree/main/cv_pdf/cv.pdf">this link</a>. -->
+<div class="text-background"><strong>Preview: Academic CV (always up-to-date)</strong></div>
+<div class="cv-preview-wrap">
+  <iframe class="cv-frame" src="academic_cv.pdf#view=FitH" title="Academic CV preview" loading="lazy"></iframe>
+</div>
 
-<!-- </p> -->
+<div class="text-background"><strong>Preview: Industry CV (last update, Spring 2025)</strong></div>
+<div class="cv-preview-wrap">
+  <iframe class="cv-frame" src="industry_cv.pdf#view=FitH" title="Industry CV preview" loading="lazy"></iframe>
+</div>
 
-<!-- </embed> -->
-
-<!-- </object> -->
-
-<!-- ```{r} -->
-
-<!-- downloadthis::download_link( -->
-
-<!--   link = "https://github.com/gaetanoscaduto/cv/blob/main/cv_pdf/cv.pdf", -->
-
-<!--   button_label = "Download pdf file", -->
-
-<!--   button_type = "danger", -->
-
-<!--   has_icon = TRUE, -->
-
-<!--   icon = "fa fa-save", -->
-
-<!--   self_contained = FALSE -->
-
-<!-- ) -->
-
-<!-- ``` -->
+<div class="text-background"><strong>Preview: Europass CV (last update, Spring 2025)</strong></div>
+<div class="cv-preview-wrap">
+  <iframe class="cv-frame" src="europass_cv.pdf#view=FitH" title="Europass CV preview" loading="lazy"></iframe>
+</div>
