--- a/index.qmd
+++ b/index.qmd
@@ -1,33 +1,85 @@
 ---
 title: "Welcome!"
+format:
+  html:
+    page-layout: full      # allow full-width content
 ---
 
 ```{=html}
 <style>
   body {
-  background-image: url("/backgrounds/background_ag1.jpeg");
-  background-attachment: fixed;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-  
-.text-background {
-    background-color: rgba(256, 256, 256, 0.6); 
-    color: black; /* White text for contrast */
-    padding: 5px 10px; /* Padding around text */
-    display: inline-block; /* Ensures the background only takes up necessary space */
-}
+    background-image: url("/backgrounds/background_ag1.jpeg");
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+
+  /* intro callout */
+  .text-background {
+    background-color: rgba(255, 255, 255, 0.6);
+    color: black;
+    padding: 5px 10px;
+    display: inline-block;
+  }
+
+  /* make the cards transparent and slightly wider */
+  .grid > .card {
+    background-color: rgba(255, 255, 255, 0.6); /* transparency */
+    box-shadow: 0 4px 12px rgba(0,0,0,0.15);    /* optional soft shadow */
+    border: none;
+    padding: 1rem;
+    border-radius: 12px;
+  }
+
+  /* widen the grid container itself */
+  .grid {
+    max-width: 1200px;     /* adjust as needed */
+    margin-left: auto;
+    margin-right: auto;
+    gap: 1.5rem;           /* spacing between cards */
+  }
+
+  /* responsive columns: 1 on phone, 2 on tablet, 3 on desktop */
+  @media (max-width: 640px) {
+    .grid { grid-template-columns: 1fr; }
+  }
+  @media (min-width: 641px) and (max-width: 1024px) {
+    .grid { grid-template-columns: repeat(2, 1fr); }
+  }
+  @media (min-width: 1025px) {
+    .grid { grid-template-columns: repeat(3, 1fr); }
+  }
 </style>
 ```
 
 ::: text-background
 Hi! My name is Gaetano Scaduto, I am 26 years old, I come from Sicily, and I live in Antwerp (Belgium).
 
-I am currently a PhD Student researching in social science. I use my professional skills to study society and politics through **quantitative** and **computational** methods, while also having rigorous training in qualitative methods. I have also worked in **political marketing**, contributing to multiple national electoral campaigns in Italy.
+I am currently a PhD Candidate researching in social science. I use my professional skills to study society and politics through **survey experiments**, **statistical modelling,** and **computational methods.** I consider my research interests broad and interdisciplinary, ranging from political sociology to social psychology and communications.
 
-From October 2025, I will join the **Erasmus Institute on Culture and Stratification** at the **Erasmus University of Rotterdam** for a postdoc position on a project on climate change perceptions.
+From October 2025, I will join the **Erasmus Institute on Culture and Stratification** at the **Erasmus University of Rotterdam** for a postdoc position on the project "Understanding the different meanings of climate change among the public".
 
-In this site you can find my CV, bio, publications, teaching materials, and other random stuff I decided to put here ;)
+On this site, you can find my CV, bio, publications, teaching materials, and some personal material I decide to share!
 :::
+
+:::::: grid
+::: card
+#### [**Read my work**](/home/publications.qmd)
+
+Browse publications, slides, and preprints.
+:::
+
+::: card
+#### [**Check My CV**](/home/cv.qmd)
+
+Latest academic and industry CVs.
+:::
+
+::: card
+#### [**Contact**](/home/contacts.qmd)
+
+Reach out!
+:::
+::::::
 
 ![](images/IMG_0615-01.jpg)
