--- a/research.qmd
+++ b/research.qmd
@@ -1,5 +1,5 @@
 ---
-title: "My Research & Me"
+title: "About me"
 ---
 
 ```{=html}
@@ -19,8 +19,50 @@ title: "My Research & Me"
 }
 </style>
 ```
+::: text-background
+**Last updated: January 2025**
+
+# My life so far
+
+## Sicily
+
+I was born on February 25th, 1999, in Agrigento, a small city in Sicily. The very same night, [Fabio Fazio interviewed Mikhail Gorbachev at the Festival di Sanremo](https://www.youtube.com/watch?v=UZh8m3KygBY).
+
+![The Concordia Temple, the most famous landmark in my hometown (also a UNESCO World Heritage site)](Tempio-della-Concordia-930x620.jpg){fig-align="center" width="323"}
+
+When I was a little boy, I wanted to be a comedian. Since then, I have changed my mind hundreds of times about what I wanted to become as an adult.
+
+I attended the "Empedocle" classical high school in Agrigento, wanting to be a writer or something like that. But I quickly got bored and decided to change my path. 
+
+## Northern Italy
+
+At the age of 18, I moved to Turin, where I earned a Bachelor's degree in **Mathematics for Engineering** with top marks at the Polytechnic of Turin.
+
+![The city of Turin, which adopted me during my university years](e715e7dd9599f54e9c2780ac9a2cf439.jpg){fig-align="center" width="323"}
+
+But then I grew tired of doing maths for its own sake. I enrolled in a Master's degree in **Political and Public Communication** at the University of Turin, from which I graduated in 2022.
+
+During the summer of 2022, I worked for a political marketing firm, managing electoral campaigns as a deputy campaign coordinator and junior researcher during the 2022 Italian general elections. 
+
+I then enrolled in the PhD program of **Analysis of Social and Economic Processes** (ASEP) at the University of Milan-Bicocca. During my Ph.D. I have also served as a **teaching assistant** for Mathematics and Public Policies in the Bachelor's program in Organization Sciences (UNIMIB). 
+
+## Low Countries
+
+Since February 2024, I have been living in Antwerp (Belgium), working with the "[Media, Movement, and Politics (M2P)](https://www.uantwerpen.be/en/research-groups/m2p/)". It started as a research stay, but it became my life, and now I'm based in Antwerp until further notice.
+
+![The entrance to the Antwerp train station, one of its most famous landmarks](images/clipboard-3574034271.png){width="323"}
+
+From October 2025, I will be starting a new adventure at the [Erasmus Institute on Culture and Stratification](https://www.eur.nl/essb/informatie-voor/onderzoekers/erasmus-institute-culture-and-stratification) within Erasmus University Rotterdam (EUR). There, I will be working on a project called "Understanding the different meanings of climate change among the public". The new challenges that I will face include using qualitative methods, exploring a new research field, and joining a new research community. I really look forward to it!
+
+![The view of Rotterdam from EUR](images/rotterdam.jpeg){width="323"}
+
+
+In my free time, I still love **writing** and **learning languages**. I am currently learning **Dutch**, which helps me integrate more easily into Belgian society. After that, I plan to refresh my French as well. I also love **biking** and listening to music of every genre. My all-time favorites? The Cure, Fabrizio De André, and Elio e le Storie Tese. My favorite directors are Paolo Sorrentino and Wes Anderson (but I swear I'm not *that* kind of hipster). My favorite TV show is probably *Scrubs* because it remains the only comedy series I still find amusing more than 20 years after its release. I am a huge fan of stand-up comedy.
+:::
 
 ::: text-background
+
+# My Research & Me
 ## It all started at the canteen...
 
 ![I still ask myself if this picture really makes sense](images/250454928_1277070772812659_5201918329899356277_n-01.jpg){fig-align="center" width="315"}
@@ -36,6 +78,8 @@ The two universities are pretty far from each other and have different canteens.
 I am an omnivore, yet I always kind of suffered from the short list of vegetarian options (and the complete lack of vegan options) that I found at the canteen near the PoliTo. When I started going to UniTo, I noticed that the canteen there ALWAYS had at least one VEGAN option. From Monday to Saturday (it was closed on Sunday) there was always something different, either lentils burgers, tofu, seitan, or something else that was prepared with a certain amount of care.
 
 I started asking myself *why*.
+
+## Stereotypes and Prejudice
 
 I had always perceived the PoliTo as a kind-of-right-wing university. STEM culture in Italy is usually linked to the center and center-right. The reasons can be many, but they may reside in the fact that people who tend to choose these faculties may value as more important the amount of money they will make from their future jobs. We could discuss these reasons another time.
 
@@ -56,6 +100,8 @@ At that time, I was preparing my PhD proposal. One day, I went to my mentor and 
 **G:** "I want to explain why in UniTo everyone is a leftie and in PoliTo everyone is a righty"
 
 ![Only for (left-wing) Italians](images/photo1665245031%20(2)-01.jpeg){fig-align="center" width="494"}
+
+##Genesis of a PhD Project
 
 M readily understood that I was going toward a gigantic stream of literature, that would have consumed my life from then on. But I always loved this stuff, and I was ready to go down the rabbit hole. For a year or so, I read papers on the alignment regarding lifestyle and political preferences. Why do lefties prefer hip-hop, modern art, vegan food, and Birkenstocks, and why do righties prefer classical music, old and sacred art, meat, and white shirts?
 
