--- a/cv.qmd
+++ b/cv.qmd
@@ -40,13 +40,13 @@ resources:
 
 Here you can find the copies and previews of my CVs
 
-<p><i class="fas fa-download pr-1 fa-fw"></i><a href="academic_cv.pdf" target="_blank" rel="noopener"> Click here to download my Academic CV (usually up to date)</a>.</p>
+<p><i class="fas fa-download pr-1 fa-fw"></i><a href="academic_cv.pdf" target="_blank" rel="noopener"> Click here to download my Academic CV</a>.</p>
 
 <p><i class="fas fa-download pr-1 fa-fw"></i><a href="industry_cv.pdf" target="_blank" rel="noopener"> Click here to download my Industry CV (last update, spring 2025)</a>.</p>
 
 <p><i class="fas fa-download pr-1 fa-fw"></i><a href="europass_cv.pdf" target="_blank" rel="noopener"> Click here to download my CV in Europass format (last update, spring 2025)</a>.</p>
 
-<div class="text-background"><strong>Preview: Academic CV (always up-to-date)</strong></div>
+<div class="text-background"><strong>Preview: Academic CV</strong></div>
 <div class="cv-preview-wrap">
   <iframe class="cv-frame" src="academic_cv.pdf#view=FitH" title="Academic CV preview" loading="lazy"></iframe>
 </div>
