--- a/index.qmd
+++ b/index.qmd
@@ -49,17 +49,52 @@ format:
   @media (min-width: 1025px) {
     .grid { grid-template-columns: repeat(3, 1fr); }
   }
+  
+  /* Mobile fixes */
+  @media (max-width: 640px) {
+    /* Make the intro box use the full width on phones */
+    .text-background {
+      display: block;       /* was inline-block */
+      width: 100%;
+      box-sizing: border-box;
+      padding: 10px 12px;   /* keep the nice padded look */
+    }
+
+    /* Let each column take the full width when stacked */
+    .columns > .column {
+      width: 100% !important;
+    }
+
+    /* Center and size the photo nicely on mobile */
+    .hero-photo {
+      display: block;
+      margin: 0.5rem auto 1rem;                 /* center */
+      width: clamp(220px, 70vw, 360px);         /* responsive width */
+      height: auto;
+    }
+  }
+
 </style>
 ```
 
 ::: text-background
-Hi! My name is Gaetano Scaduto, I am 26 years old, I come from Sicily, and I live in Antwerp (Belgium).
+::: {.columns}
+::: {.column width="62%"}
+::: {.text-background}
+Hi! My name is Gaetano Scaduto, I am 26 years old, I come from Agrigento, Sicily (see background!), and I live in Antwerp (Belgium).
 
-I am currently a PhD Candidate researching in social science. I use my professional skills to study society and politics through **survey experiments**, **statistical modelling,** and **computational methods.** I consider my research interests broad and interdisciplinary, ranging from political sociology to social psychology and communications.
+I am a postdoctoral researcher at the [Erasmus Institute on Culture and Stratification](https://www.eur.nl/en/essb/research/erasmus-institute-culture-and-stratification/researchers), part of the [Governance and Pluralism](https://www.eur.nl/en/essb/about-essb/academic-teams/governance-and-pluralism) team at Erasmus University of Rotterdam. I work on the project "[Understanding the different meanings of climate change among the public](https://www.nwo.nl/en/projects/domyz32585)", a comparative, mixed-methods project aiming at understanding the different meanings attributed to climate change in the Netherlands and Italy.
 
-From October 2025, I will join the **Erasmus Institute on Culture and Stratification** at the **Erasmus University of Rotterdam** for a postdoc position on the project "Understanding the different meanings of climate change among the public".
+I consider my research interests broad and interdisciplinary, ranging from political sociology to social psychology and communications. In the past, I've worked on several topics, such as [political stereotypes](https://www.tandfonline.com/doi/abs/10.1080/13608746.2024.2411539), [politicians' communication online](https://journals.sagepub.com/doi/10.1177/19401612251339107?int.sj-full-text.similar-articles.9), [privacy protection behavior online](https://doi.org/10.1177/ 08944393251341201), and [political talk show pundits in Italy](https://www.rivisteweb.it/doi/10. 3270/115244).
 
-On this site, you can find my CV, bio, publications, teaching materials, and some personal material I decide to share!
+On this website, you can find my CV, bio, publications, teaching materials, and some personal material I decide to share!
+:::
+:::
+
+::: {.column width="38%"}
+![](images/WhatsApp%20Image%202025-10-16%20at%2016.40.45.jpeg){.hero-photo width="340"}
+:::
+:::
 :::
 
 :::::: grid
@@ -81,5 +116,3 @@ Latest academic and industry CVs.
 Reach out!
 :::
 ::::::
-
-![](images/IMG_0615-01.jpg)
