--- a/publications.qmd
+++ b/publications.qmd
@@ -21,104 +21,99 @@ title: "Things I wrote"
 ```
 
 ::: text-background
-Here you can find the list of the papers I worked on. If you need further info, just reach out and I'll be happy to share more!
+Here you can find the list of the papers I worked on, organized by topic rather than chronological order. If you need further info, just reach out and I'll be happy to share more!
 
 Notice that this might not be an updated list. The most updated list of my publications on is always available in [my CV](https://gaetanoscaduto.quarto.pub/home/academic_cv.pdf).
 
-If your institution provides access to the papers, please download them from the websites linked with the authors' names. This helps with my stats.
+If your institution provides access to the papers, please download them from the websites linked to the authors' names. This helps with my stats.
 
-If you do not have access, please reach out via email (gaetano.scaduto\@unimib.it or gaetanoscaduto1999\@gmail.com) and I will be very glad to provide you with a copy of the manuscript. If possible, in this section I also provide links to download unformatted or preprint version of my papers independently.
+If you do not have access, please reach out via email (scaduto\@essb.eur.nl), and I will be happy to provide you with a copy of the manuscript. If possible, I also provide links to download unformatted or preprint versions of my papers independently in this section.
 
-## Published/Accepted papers
+## Politicultural Linking
 
--   Scaduto, G. (2025). Politicultural Linking: Inferences between Political and Apolitical Traits. Accepted in Public Opinion Quarterly.
+This is the topic of my PhD dissertation, which I wrote during my PhD at the University of Milan Bicocca (2022-2025). "Politicultural Linking" is a concept I introduced to indicate what is commonly referred to as "Political Stereotypes", "Political inferences from apolitical cues", "Political projections", and so on. Out of this research effort, in addition to a monograph, the following publications arose:
 
-    -   Slideshow available <i class="fas fa-download pr-1 fa-fw"></i> [here](presentations/PL_presentation.pdf){target="_blank"}.
-    -   Preprint available [here](https://osf.io/preprints/socarxiv/zvcx2_v1).
+#### [Scaduto, G. (2025)](https://doi.org/10.1093/poq/nfaf047). Politicultural Linking: Inferences between Political and Apolitical Traits. Public Opinion Quarterly, 89(3).
 
--   [Decadri, S., Mancosu, M., Negri, F., Scaduto, G.](https://doi.org/10.1177/19401612251339107) Aligning Emotions: A Comparative Analysis of Text and Imagery by European Party Leaders on Instagram. The International Journal of Press/Politics.
+-   This is my theoretical framework and literature review. It contains all the theoretical contributions I brought to the field, from the introduction of "Politicultural Linking", to the identification of research gaps and promising avanues in the field.
 
-    -   Yet one another of my "communication" stream of research around politicians' Instagram profile content
+#### [Scaduto, G., Negri, F. (2024)](https://www.tandfonline.com/doi/full/10.1080/13608746.2024.2411539). Food for (political) thought: political inferences from apolitical cues and their social consequences in Italy. South European Society and Politics, 1–30.
 
--   [Respi, C., Gui, M., Scaduto, G., Serini, M., Pizzul, D., Gerosa, T., & Lutz, C. (2024).](https://doi.org/10.1177/%2008944393251341201) Lower Cynicism, Not Higher Literacy, Promotes Protective Behavior: Exploring the “privacy exception” in the Digital Inequality Framework. Social Science Computer Review.
+-   This paper is the first empirical investigation of Politicultural Linking. It shows that people can form political judgments about others in Italy through lifestyle cues such as food preferences. It does so through a survey vignette experiment fielded in 2023.
 
-    -   A paper about the factors affecting privacy protection behavior online, linked to the "VDATA" project I collaborated with in 2023. In this aper, I dealt with the analysis together with Tiziano Gerosa, using structural equation models (with lavaan!). Super fun!
+-   Awarded "Best paper by a Junior Researcher" by the Italian Political Communication Association (ASSOCOMPOL) in 2024.
 
--   [Scaduto, G, Negri, F. (2024)](https://www.rivisteweb.it/doi/10.3270/115244). The Pundit Paradox: Exploring the Mismatch between Supply and Demand in Italian Political Talk Show Guests. Comunicazione Politica.
+-   You can play with some of the data with a ShinyApp [here](https://gaetanoscaduto.shinyapps.io/risposteaperte/).
 
-    -   You can find a ShinyApp to play with the data from this project [here](https://gaetanoscaduto.shinyapps.io/talkshows/).
+-   The data is publicly available [here](https://www.unidata.unimib.it/?indagine=inferenze-politiche-da-elementi-apolitici-il-caso-del-cibo-in-italia-2023).
 
-    -   You can find the data and replication files for this project [here](https://github.com/gaetanoscaduto/Pundit_Paradox_Rep_Files).
+-   Part of the replication code is available [here](https://github.com/gaetanoscaduto/FFPT).
 
-    -   Slideshow available <i class="fas fa-download pr-1 fa-fw"></i> [here](presentations/PP_presentation.pdf){target="_blank"}.
+#### Scaduto, G., Negri, F., Decadri, S. Ideology at First Sight: A Comparative Study of Ideological Stereotypes in 4 European Countries. Submitted to Political Psychology.
 
-    -   If you cannot access the paper, you can click <i class="fas fa-download pr-1 fa-fw"></i> [here](pundit_paradox.pdf) for an unformatted version.
+-   In this work, I show that politicultural linking, in the form of political stereotypes, is a well-spread behavior, and fairly consistent, in different cultural and political contexts across Europe.
 
-<!-- -->
+-   This manuscript is currently under review. I will upload a preprint online upon acceptance.
 
--   [Scaduto, G., Negri, F. (2024)](https://www.tandfonline.com/doi/full/10.1080/13608746.2024.2411539). Food for (political) thought: political inferences from apolitical cues and their social consequences in Italy. South European Society and Politics, 1–30.
+#### Scaduto, G., Negri, F., Decadri, S. It’s the Homophily, Stupid: How Apolitical Similarities Affect Political Conversations. A Cross-Country Dynamic Parallel Experiment. Accepted in Political Behavior.
 
-    -   Awarded "Best paper by a Junior Researcher" by the Italian Political Communication Association (ASSOCOMPOL) in 2024.
+-   In this paper, I show test the possible behavioral consequences of politicultural linking, showing that, while people are able and prone to infer others' political preferences from apolitical cues, these inferences do not threaten cross-ideological discussion
+-   Preprint available [here](https://osf.io/preprints/socarxiv/6j8nr_v1).
 
-    -   You can play with some of the data with a ShinyApp [here](https://gaetanoscaduto.shinyapps.io/risposteaperte/).
+#### Tsoulou-Malakoudi, A., Goovaerts, I., Scaduto, G., Van Erkel, P., Walgrave, S. Political others are perceived as non-politically different. Under review in the European Journal of Political Research.
 
-    -   The data is publicly available [here](https://www.unidata.unimib.it/?indagine=inferenze-politiche-da-elementi-apolitici-il-caso-del-cibo-in-italia-2023).
+-   Exploring the other side of politicultural linking: what do people assume about your apolitical characteristics when they learn about your political preferences? The study is focused on Belgium, with data so cool that it made me move there!
 
-    -   Part of the replication code is available [here](https://github.com/gaetanoscaduto/FFPT).
+#### Goovaerts, I., Tsoulou-Malakoudi, A., Scaduto, G., Feitosa, F., Lefevere, J. Divided Beyond Politics: How Perceptions of Non-Political Differences Are Linked to Affective Polarization Among Citizens. Under review in European Political Science Review.
 
-    -   Slideshow available <i class="fas fa-download pr-1 fa-fw"></i> [here](presentations/FFPT_presentation.pdf){target="_blank"}.
+-   Trying to dig deeper in the relationship between politicultural linking and affective polarization!
 
-    -   If you cannot access the paper, you can click <i class="fas fa-download pr-1 fa-fw"></i> [here](publications/manuscript%20versions/FFPT_unformatted.pdf){target="_blank"} for an unformatted version.
+## Political Communication
 
-<!-- -->
+#### [Decadri, S., Mancosu, M., Negri, F., Scaduto, G.](https://doi.org/10.1177/19401612251339107) Aligning Emotions: A Comparative Analysis of Text and Imagery by European Party Leaders on Instagram. The International Journal of Press/Politics.
 
--   [Mancosu, M., Scaduto, G. (2024).](https://www.tandfonline.com/doi/full/10.1080/15205436.2024.2351980)"Crowds and Smiles: Visual Opportunity Structures and the Communication of European Political Leaders during the Covid-19 Pandemic". Mass Communication & Society. *Mass Communication and Society*, 1-26.
+-   In this paper, we use computational methods to explore EU politicians' communication, with a particular focus on the peculiarity of the visual and textual features contained in populist politicians' messages.
+-   Computational methods!
 
-    -   Slideshow available <i class="fas fa-download pr-1 fa-fw"></i> [here](presentations/CoS_presentation.pdf){target="_blank"}.
+#### [Mancosu, M., Scaduto, G. (2024).](https://www.tandfonline.com/doi/full/10.1080/15205436.2024.2351980)"Crowds and Smiles: Visual Opportunity Structures and the Communication of European Political Leaders during the Covid-19 Pandemic". Mass Communication & Society. *Mass Communication and Society*, 1-26.
 
-    -   If you cannot access the paper, you can click <i class="fas fa-download pr-1 fa-fw"></i> [here](publications/manuscript%20versions/CoS_unformatted.pdf){target="_blank"} for an unformatted version.
+-   Exploring in depth the visual features of the Instagram communications of political leaders in 28 EU countries during the COVID-19 pandemic. Main takeaways: when COVID hits harder, politicians smile less online! There's no reason to smile on the face of disaster, right?
 
-<!--         <p><i class="fas fa-download pr-1 fa-fw"></i><a href=publications/Mancosu_Scaduto_2024.pdf target=_blank> Click here to download</a>.</p> -->
+#### [Scaduto, G., Mancosu, M. (2022).](https://www.rivisteweb.it/doi/10.3270/104851) Lacrime di coccodrillo? Variazioni nel contenuto visuale su Instagram dei politici populisti e mainstream durante la pandemia. *Comunicazione politica*, *23*(2), 255-276.
 
--   [Bertero, A, Scaduto, G](https://oaj.fupress.net/index.php/qoe/article/view/14224). (2023). A midsummer night's dream: political communication during the Italian 2022 electoral campaign. Italian Journal of Electoral Studies QOE-IJES.
+-   The very first paper I ever worked on, in Italian. Tries to investigate one simple question: do political leaders in Italy smile less on Instagram when there are more deaths by Covid? And are there differences between populist and non-populist?
 
-    -   Open access [here](https://oaj.fupress.net/index.php/qoe/article/view/14224/12058)!
+#### [Scaduto, G, Negri, F. (2024)](https://www.rivisteweb.it/doi/10.3270/115244). The Pundit Paradox: Exploring the Mismatch between Supply and Demand in Italian Political Talk Show Guests. Comunicazione Politica.
 
-<!--         <p><i class="fas fa-download pr-1 fa-fw"></i><a href=publications/Bertero_Scaduto_2023.pdf target=_blank> Click here to download</a>.</p> -->
+-   Did you know that political pundits on Italian Talk shows are older, male journalists, while the public trust younger, female experts more? If you read this paper, you would know!
 
--   [Scaduto, G., Mancosu, M. (2022).](https://www.rivisteweb.it/doi/10.3270/104851) Lacrime di coccodrillo? Variazioni nel contenuto visuale su Instagram dei politici populisti e mainstream durante la pandemia. *Comunicazione politica*, *23*(2), 255-276.
+-   You can find a ShinyApp to play with the data from this project [here](https://gaetanoscaduto.shinyapps.io/talkshows/).
 
-    -   The very first paper I ever worked on. Tries to investigate one simple question: do political leader smile less on Instagram while there are more deaths by Covid? And are there differences between populist and non-populist?
+-   You can find the data and replication files for this project [here](https://github.com/gaetanoscaduto/Pundit_Paradox_Rep_Files).
 
-<!--         <p><i class="fas fa-download pr-1 fa-fw"></i><a href=publications/Scaduto_Mancosu_2022.pdf target=_blank> Click here to download</a>.</p> -->
+#### [Bertero, A, Scaduto, G](https://oaj.fupress.net/index.php/qoe/article/view/14224). (2023). A midsummer night's dream: political communication during the Italian 2022 electoral campaign. Italian Journal of Electoral Studies QOE-IJES.
 
--   [Scaduto, G. (2022)](https://www.rivisteweb.it/doi/10.1424/104525). Gli algoritmi di computer vision: una guida all'uso per le scienze politiche e sociali. *Polis*, *36*(2), 315-332.
+-   What did political leaders talk about online during the 2022 electoral campaign? Find out here!
 
-    -   Dealing with IA and machine learning before ChatGTP, Midjourneys and all those guys were cool.
+## Journalism studies
 
-<!--         <p><i class="fas fa-download pr-1 fa-fw"></i><a href=publications/Scaduto_2022.pdf target=_blank> Click here to download</a>.</p> -->
+Coming soon! Still working on some drafts. I will disclose them at a later stage!
 
-## Under review
+## Other projects
 
--   Scaduto, G., Negri, F., Decadri, S. It’s the Homophily, Stupid: How Apolitical Similarities Affect Political Conversations. A Cross-Country Dynamic Parallel Experiment. Under review in Political Behavior.
+#### [Respi, C., Gui, M., Scaduto, G., Serini, M., Pizzul, D., Gerosa, T., & Lutz, C. (2024).](https://doi.org/10.1177/%2008944393251341201) Lower Cynicism, Not Higher Literacy, Promotes Protective Behavior: Exploring the “privacy exception” in the Digital Inequality Framework. Social Science Computer Review.
 
-    -   Preprint available [here](https://osf.io/preprints/socarxiv/6j8nr_v1).
+-   A paper about the factors affecting privacy protection behavior online, linked to the "VDATA" project I collaborated with in 2023. In this aper, I dealt with the analysis together with Tiziano Gerosa, using structural equation models (with lavaan!). Super fun!
 
--   Tsoulou-Malakoudi, A., Goovaerts, I., Scaduto, G., Van Erkel, P., Walgrave, S. Political others are perceived as non-politically different. Under review in European Journal of Political Research.
+#### [Scaduto, G. (2022)](https://www.rivisteweb.it/doi/10.1424/104525). Gli algoritmi di computer vision: una guida all'uso per le scienze politiche e sociali. *Polis*, *36*(2), 315-332.
 
--   Decadri, S., Negri, F., Scaduto, G. Visual Conjoint Experiments in Social-Scientific Research: A Semi-Systematic Review and a Protocol Blueprint for Cross-Country Applications. Submitted.
+-   Dealing with IA and machine learning before ChatGTP, Midjourneys and all those guys were cool.
 
-## Working Papers
+#### Decadri, S., Negri, F., Scaduto, G. Visual Conjoint Experiments in Social-Scientific Research: A Semi-Systematic Review and a Protocol Blueprint for Cross-Country Applications. Submitted.
 
--   Decadri, S., Negri, F., Scaduto, G. A Visual Conjoint Experiment on Ideological Inferences from Politicians’ Instagram Profiles.
+-   A methodological review about one of the coolest new methods out there: visual conjoint experiments!
 
-    -   Slideshow available <i class="fas fa-download pr-1 fa-fw"></i> [here](presentations/VC_presentation.pdf){target="_blank"}.
-
--   Goovaerts, I., Tsoulou-Malakoudi, A., Scaduto, G., Lefevere, J., Feitosa, F. The apolitical side of affective polarization: Examining the role of perceived non-political differences and similarities among voters
-
--   Tsoulou-Malakoudi, A., Goovaerts, I., Scaduto, G., Van Erkel, P., Walgrave, S. How similar or different do citizens perceive in- and out-party supporters with regard to non-political traits in multi-party systems?
-
-## Other stuff I wrote
+## Other (non-academic) things I wrote
 
 -   [My MA thesis](publications/TESI_merged.pdf)! (In italian) "Un paese di musichette mentre fuori c'è la morte? Indagine sulla comunicazione dei politici italiani su Instagram durante la pandemia di Covid-19". Thesis supervisor: prof. Moreno Mancosu.
 
