--- a/index.qmd
+++ b/index.qmd
@@ -89,7 +89,7 @@ I am currently working on the project "Understanding the different meanings of c
 
 I consider my research interests broad and interdisciplinary, ranging from political sociology to social psychology and communications. In the past, I've worked on several topics, such as [political stereotypes](https://www.tandfonline.com/doi/abs/10.1080/13608746.2024.2411539), [politicians' communication online](https://journals.sagepub.com/doi/10.1177/19401612251339107?int.sj-full-text.similar-articles.9), [privacy protection behavior online](https://doi.org/10.1177/%2008944393251341201), and [political talk show pundits in Italy](https://www.rivisteweb.it/doi/10.%203270/115244).
 
-On this website, you can find my CV, bio, publications, teaching materials, and some personal material I decide to share!
+On this website, you can find my CV, bio, publications, teaching materials, and some personal material I decide to share :)
 :::
 ::::
 
